# homelab-ansible

./: .gitignore  README.md  hosts  inventory.yml  pyproject.toml  requirements.yml  secrets.enc
.githooks/: pre-commit
.github/workflows/: lint.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
group_vars/: openvpn.yml
group_vars/all/: secrets.yml.secret
host_vars/: prometheus.yml
playbooks/: grafana.yml  node_exporter.yml  openvpn-install.yml  openvpn-sync-clients.yml  prometheus.yml
playbooks/roles/openvpn/defaults/: main.yml
playbooks/roles/openvpn/handlers/: main.yml
playbooks/roles/openvpn/tasks/: add_client.yml  main.yml  packages.yml  pki.yml  server.yml
playbooks/roles/openvpn/templates/: client.ovpn.j2  rc.local.j2  server.conf.j2
