[tool.poetry]
name = "homelab-ansible"
version = "0.1.0"
description = ""
authors = ["Sander Ploegsma <sanderploegsma@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.5.0"
ansible-lint = { version = "^6.15.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
